# TeacherPlans

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml
teacherfactory/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GROQ_README.md  Makefile  QUICKSTART.md  SECURITY.md  config.default.toml  config.groq.example.toml  docker-compose.yml  pyproject.toml  scratch_assessment.json  scratch_docx.json  scratch_preprocessed.xml  scratch_raw.xml  template.docx  template_fixed.docx
teacherfactory/.claude/: settings.local.json
teacherfactory/docs/: 09.01.03 ПОП СПО Оператор информационных систем и ресурсов.doc  09.01.03 ПОП СПО Оператор информационных систем и ресурсов.docx  09.02.13_ПОП_СПО_ОЧ.docx
teacherfactory/scratch/: build_assessment_template.py  build_template_v3.py  check_source.py  debug_render.py  dump_endfor_context.py  dump_for_context.py  dump_raw_xml.py  dump_tags.py  extract_topics.py  find_for.py  find_step.py  inspect_output.py  inspect_template.py  make_db_lessons.py  make_template.py  make_template_v2.py  parse_assessment.py  parse_docx.py  smoke_import.py  test_render.py  verify_assessment_render.py  verify_render.py
teacherfactory/src/teacherfactory/: __init__.py  app.py  app_with_groq.py  auth.py  config.py  embeddings.py  generator.py  groq_client.py  indexer.py  llm_provider.py  model.py  paths.py  pipeline.py  prompts.py  rebuild_template.py  render.py  retrieval.py  test_llm.py  text_utils.py  topic_plan.py  validation.py
teacherfactory/src/teacherfactory/documents/: __init__.py  assessment_materials.py  base.py  lesson_card.py
teacherfactory/src/teacherfactory/views/: __init__.py  batch.py  chat.py  common.py  errors.py  sidebar.py  single.py
teacherfactory/tests/: conftest.py  test_bm25_storage.py  test_chunking.py  test_competency_validation.py  test_config.py  test_documents.py  test_llm_provider.py  test_model.py  test_pipeline.py  test_render.py  test_retrieval.py  test_text_utils.py
