[project]
name = "teacherfactory"
version = "0.1.0"
description = "Генератор технологических карт уроков для СПО на основе RAG и LLM"
authors = [
    {name = "Axlifreeway",email = "129040902+Axlifreeway@users.noreply.github.com"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "docxtpl (>=0.20.2,<0.21.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
    "python-docx (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "teacherfactory", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
